Freshen up tests with java 9 code